--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.44.1",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0",
