added authentication confirmation to authLayout and created Map component

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
     "framer-motion": "^10.12.16",
-    "leaflet": "^1.9.4",
+    "leaflet": "^1.9.3",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -32,5 +32,8 @@
     "typescript": "5.0.4",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3"
   }
 }
